// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(optimized) transpiles external stylesheets (CommonJS modules) 1`] = `
"const _defaultExport = ['div.jsx-2292456818{font-size:3em;}'];
_defaultExport.__hash = '2292456818';


module.exports = _defaultExport;"
`;

exports[`(optimized) transpiles external stylesheets 1`] = `
"import _JSXStyle from 'styled-jsx/style';

import colors, { size } from './constants';
const color = 'red';

const bar = ['div.jsx-2141779268{font-size:3em;}'];

bar.__hash = '2141779268';
const baz = ['div{font-size:3em;}'];

baz.__hash = '2141779268';
a.__hash = '262929833';
const a = [\`div{font-size:\${size}em;}\`];

export const uh = bar;

export const foo = [\`div.jsx-2299908427{color:\${color};}\`];

foo.__hash = '2299908427';
({
  styles: <_JSXStyle id={\\"1329679275\\"}>{[\`div.jsx-1329679275{color:\${colors.green.light};}\`, 'a.jsx-1329679275{color:red;}']}</_JSXStyle>,
  className: 'jsx-1329679275'
});

const b = {
  styles: <_JSXStyle id={\\"1329679275\\"}>{[\`div.jsx-1329679275{color:\${colors.green.light};}\`, 'a.jsx-1329679275{color:red;}']}</_JSXStyle>,
  className: 'jsx-1329679275'
};

const dynamic = colors => {
  const b = {
    styles: <_JSXStyle id={\\"3325296745\\"} dynamic={[colors.green.light]}>{[\`div.__jsx-style-dynamic-selector{color:\${colors.green.light};}\`, 'a.__jsx-style-dynamic-selector{color:red;}']}</_JSXStyle>,
    className: _JSXStyle.dynamic([['3325296745', [colors.green.light]]])
  };
};

export default {
  styles: <_JSXStyle id={\\"3290112549\\"}>{['div.jsx-3290112549{font-size:3em;}', \`p.jsx-3290112549{color:\${color};}\`]}</_JSXStyle>,
  className: 'jsx-3290112549'
};"
`;

exports[`Makes sure that style nodes are not re-used 1`] = `
"\\"use strict\\";

var _style = _interopRequireDefault(require(\\"styled-jsx/style\\"));

var _App = _interopRequireDefault(require(\\"./App.styles\\"));

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { default: obj }; }

function Test() {
  return <div>
        <_style.default id={_App.default.__hash}>{_App.default}</_style.default>
      </div>;
}"
`;

exports[`does not transpile non-styled-jsx tagged teplate literals 1`] = `
"import css from 'hell';

const color = 'red';

const bar = css\`
  div {
    font-size: 3em;
  }
\`;
export const uh = bar;

export const foo = css\`div { color: \${color}}\`;

export default css\`
  div {
    font-size: 3em;
  }
  p {
    color: \${color};
  }
\`;

const Title = styled.h1\`
  color: red;
  font-size: 50px;
\`;

const AnotherTitle = Title.extend\`color: blue;\`;

export const Component = () => <AnotherTitle>My page</AnotherTitle>;"
`;

exports[`injects JSXStyle for nested scope 1`] = `
"import _JSXStyle from 'styled-jsx/style';


function test() {
  ({
    styles: <_JSXStyle id={\\"2886504620\\"}>{\\"div.jsx-2886504620{color:red;}\\"}</_JSXStyle>,
    className: 'jsx-2886504620'
  });
}"
`;

exports[`transpiles external stylesheets (CommonJS modules) 1`] = `
"const _defaultExport = new String('div.jsx-2292456818{font-size:3em;}');

_defaultExport.__hash = '2292456818';


module.exports = _defaultExport;"
`;

exports[`transpiles external stylesheets 1`] = `
"import _JSXStyle from 'styled-jsx/style';

import colors, { size } from './constants';
const color = 'red';

const bar = new String('div.jsx-2141779268{font-size:3em;}');

bar.__hash = '2141779268';
const baz = new String('div{font-size:3em;}');

baz.__hash = '2141779268';
a.__hash = '262929833';
const a = new String(\`div{font-size:\${size}em;}\`);

export const uh = bar;

export const foo = new String(\`div.jsx-2299908427{color:\${color};}\`);

foo.__hash = '2299908427';
({
  styles: <_JSXStyle id={\\"1329679275\\"}>{\`div.jsx-1329679275{color:\${colors.green.light};}a.jsx-1329679275{color:red;}\`}</_JSXStyle>,
  className: 'jsx-1329679275'
});

const b = {
  styles: <_JSXStyle id={\\"1329679275\\"}>{\`div.jsx-1329679275{color:\${colors.green.light};}a.jsx-1329679275{color:red;}\`}</_JSXStyle>,
  className: 'jsx-1329679275'
};

const dynamic = colors => {
  const b = {
    styles: <_JSXStyle id={\\"3325296745\\"} dynamic={[colors.green.light]}>{\`div.__jsx-style-dynamic-selector{color:\${colors.green.light};}a.__jsx-style-dynamic-selector{color:red;}\`}</_JSXStyle>,
    className: _JSXStyle.dynamic([['3325296745', [colors.green.light]]])
  };
};

export default {
  styles: <_JSXStyle id={\\"3290112549\\"}>{\`div.jsx-3290112549{font-size:3em;}p.jsx-3290112549{color:\${color};}\`}</_JSXStyle>,
  className: 'jsx-3290112549'
};"
`;

exports[`use external stylesheet and dynamic element 1`] = `
"import _JSXStyle from \\"styled-jsx/style\\";
import styles from './styles2';

export default (({ level = 1 }) => {
  const Element = \`h\${level}\`;

  return <Element className={\`jsx-\${styles.__hash}\` + \\" \\" + \\"root\\"}>
      <p className={\`jsx-\${styles.__hash}\`}>dynamic element</p>
      <_JSXStyle id={styles.__hash}>{styles}</_JSXStyle>
    </Element>;
});"
`;

exports[`use external stylesheets (global only) 1`] = `
"import _JSXStyle from 'styled-jsx/style';
import styles, { foo as styles3 } from './styles';

const styles2 = require('./styles2');

export default (() => <div>
    <p>test</p>
    <div>woot</div>
    <p>woot</p>
    <_JSXStyle id={styles2.__hash}>{styles2}</_JSXStyle>
    <_JSXStyle id={styles3.__hash}>{styles3}</_JSXStyle>
    <_JSXStyle id={styles.__hash}>{styles}</_JSXStyle>
  </div>);"
`;

exports[`use external stylesheets (multi-line) 1`] = `
"import _JSXStyle from 'styled-jsx/style';
import styles from './styles';

export default (() => <div className={\`jsx-\${styles.__hash}\`}>
    <p className={\`jsx-\${styles.__hash}\`}>test</p>
    <_JSXStyle id={styles.__hash}>{styles}</_JSXStyle>
  </div>);"
`;

exports[`use external stylesheets 1`] = `
"import _JSXStyle from 'styled-jsx/style';
import styles from './styles';
const styles2 = require('./styles2');
import { foo as styles3 } from './styles';

export default (() => <div className={'jsx-1646697228 ' + \`jsx-\${styles3.__hash} jsx-\${styles.__hash}\`}>
    <p className={'jsx-1646697228 ' + \`jsx-\${styles3.__hash} jsx-\${styles.__hash}\` + ' ' + 'foo'}>test</p>
    <p className={'jsx-1646697228 ' + \`jsx-\${styles3.__hash} jsx-\${styles.__hash}\`}>woot</p>
    <_JSXStyle id={styles2.__hash}>{styles2}</_JSXStyle>
    <_JSXStyle id={styles3.__hash}>{styles3}</_JSXStyle>
    <div className={'jsx-1646697228 ' + \`jsx-\${styles3.__hash} jsx-\${styles.__hash}\`}>woot</div>
    <_JSXStyle id={\\"1646697228\\"}>{\\"p.jsx-1646697228{color:red;}div.jsx-1646697228{color:green;}\\"}</_JSXStyle>
    <_JSXStyle id={styles.__hash}>{styles}</_JSXStyle>
  </div>);

export const Test = () => <div className={'jsx-1646697228 ' + \`jsx-\${styles3.__hash}\`}>
    <p className={'jsx-1646697228 ' + \`jsx-\${styles3.__hash}\` + ' ' + 'foo'}>test</p>
    <p className={'jsx-1646697228 ' + \`jsx-\${styles3.__hash}\`}>woot</p>
    <_JSXStyle id={styles3.__hash}>{styles3}</_JSXStyle>
    <div className={'jsx-1646697228 ' + \`jsx-\${styles3.__hash}\`}>woot</div>
    <_JSXStyle id={\\"1646697228\\"}>{\\"p.jsx-1646697228{color:red;}div.jsx-1646697228{color:green;}\\"}</_JSXStyle>
  </div>;"
`;
